# origin

./: .gitignore
Lesson 1/Task 1/: Task 1.sln  Task 1.vcxproj  main.cpp  sql_query_builder.h
Lesson 1/Task 2/: Task 2.sln  Task 2.vcxproj  Task 2.vcxproj.filters  main.cpp  sql_query_builder.h
Lesson 1/Task 3/: Task 3.sln  Task 3.vcxproj  main.cpp  sql_query_builder.h
Lesson 10/Task 1/: Task 1.sln
Lesson 10/Task 2/: Task 2.sln
Lesson 10/Task 3/: CMakeLists.txt  leaver.cpp  leaver.h  main.cpp
Lesson 10/Task 4/: Task 4.sln
Lesson 10/Task 5/: CMakeLists.txt  main.cpp
Lesson 10/Task 5/FiguresLib/: CMakeLists.txt  equilateral_triangle.h  figure.cpp  figure.h  isosceles_triangle.cpp  isosceles_triangle.h  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  right_triangle.cpp  right_triangle.h  square.h  triangle.cpp  triangle.h
Lesson 11/: CMakeLists.txt  extended_array.h  test.cpp
Lesson 2/Task 1/: Task 1.sln  Task 1.vcxproj  main.cpp
Lesson 2/Task 2/: Task 2.sln  Task 2.vcxproj  Task 2.vcxproj.filters  main.cpp  timer.h
Lesson 2/Task 3/: Task 3.sln  Task 3.vcxproj  main.cpp
Lesson 3/Task 1/: CMakeLists.txt  Task 1.sln  Task 1.vcxproj  main.cpp  my_list.h
Lesson 3/Task 2/: CMakeLists.txt  Task 2.sln  Task 2.vcxproj  main.cpp  my_list.cpp
Lesson 3/Task 3/: Task 3.sln  (+2 more)
Lesson 4/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
Lesson 9/Task 2/: CMakeLists.txt  figure.cpp  figure.h  isosceles_triangle.h  main.cpp  quadrangle.cpp  rectangle.h  right_triangle.cpp  right_triangle.h  square.h
(+109 files in other folders)
